--- a/publication.html
+++ b/publication.html
@@ -67,7 +67,7 @@
 
             <div class="container" style="max-width: 1200px;padding-right: 5px;padding-left: 5px;padding-top: 80px;">
                 <div class="block-content" style="padding-right: 1%;padding-left: 1%;padding-top: 30px;padding-bottom: 30px;">
-                    <h2 class="text-center" style="margin-bottom: 40px;">2024</h2>
+                    <h2 class="text-center" style="margin-bottom: 40px;">期刊论文</h2>
                     <div class="clean-blog-post" style="padding-bottom: 70px;">
                         <ol style="margin-bottom: 10px;padding-left: 16px;">
                                 <li style="margin-bottom: 10px;"><strong><span style="color: rgb(33, 33, 33);">[TITS'24] </span></strong><span style="color: rgb(33, 33, 33);"></span>Renxin Zhong, Qingnan Liang, Dabo Xu, Mike Smith, Tianlu Pan. (2024).Day-to-Day Road Pricing and Network Performance Analysis via Output Stability. IEEE Transactions on Intelligent Transportation Systems. [<a href="https://www.researchgate.net/profile/Renxin-Zhong/publication/381375515_Day-to-day_road_pricing_and_network_performance_analysis_via_output_stability/links/6683addd714e0b03153b4327/Day-to-Day-Road-Pricing-and-Network-Performance-Analysis-via-Output-Stability.pdf" style="font-size: 16px;color: rgb(13, 110, 253);" target="_blank">PDF</a><span style="color: rgb(34, 34, 34);">]</span></li>
@@ -78,7 +78,29 @@
 
                 </div>
             </div>
+
+
+            <div class="container" style="max-width: 1200px;padding-right: 5px;padding-left: 5px;padding-top: 80px;">
+                <div class="block-content" style="padding-right: 1%;padding-left: 1%;padding-top: 30px;padding-bottom: 30px;">
+                    <h2 class="text-center" style="margin-bottom: 40px;">授权专利</h2>
+                    <div class="clean-blog-post" style="padding-bottom: 70px;">
+                        <ol style="margin-bottom: 10px;padding-left: 16px;">
+                                <li style="margin-bottom: 10px;"><strong><span style="color: rgb(33, 33, 33);">[发明专利] </span></strong><span style="color: rgb(33, 33, 33);"></span>钟任新、方炽霖、李昕岸、金啸、苏子诚. 一种交通信号控制方法、装置、设备及存储介质. 申请日：2021/9/18. 授权日：2022/8/30. 专利号：202111094984.0</li>
+                                <li style="margin-bottom: 10px;"><strong><span style="color: rgb(33, 33, 33);">[发明专利] </span></strong><span style="color: rgb(33, 33, 33);"></span>胡胜、钟任新、黄文滔、谢秀霞、李绍状、詹志. 基于行程时间演化的交通异常识别方法、系统及存储介质. 申请日：2020/1/7. 授权日：2021/6/1. 专利号: 202010015303.6</li>
+                                <li style="margin-bottom: 10px;"><strong><span style="color: rgb(33, 33, 33);">[发明专利] </span></strong><span style="color: rgb(33, 33, 33);"></span>陈灿，钟任新，罗佳晨，蔡恒兴，黄云萍. 一种基于函数型主成分分析的实时行程时间预测. 申请日: 2017/7/24. 授权日: 2021/9/7. 专利号：201710607411.0</li>
+                                <li style="margin-bottom: 10px;"><strong><span style="color: rgb(33, 33, 33);">[发明专利] </span></strong><span style="color: rgb(33, 33, 33);">傅恺延、钟任新. 基于线性策略的交叉熵算法的交通仿真模型参数标定方法. 申请日：2016/4/13. 授权日：2019/11/19. 专利号：201610231247.3</span></li>
+                                <li style="margin-bottom: 10px;"><strong><span style="color: rgb(33, 33, 33);">[发明专利] </span></strong><span style="color: rgb(33, 33, 33);">蔡恒兴、钟任新、徐若辰、黄云萍、罗佳晨. 基于趋势性指标及波动性指标的交通事件自动检测方法. 申请日：2016/11/24. 授权日：2019/2/19. 专利号：201611050875.8</span></li>
+                                <li style="margin-bottom: 10px;"><strong><span style="color: rgb(33, 33, 33);">[发明专利] </span></strong><span style="color: rgb(33, 33, 33);">蔡恒兴、钟任新、钟嘉明. 基于动态时间规整的车辆终点及行程时间计算方法. 申请日：2016/9/19. 授权日: 2019/6/25. 专利号：201610831496.6</span></li>
+                                </ol>
+                    </div>
+
+                </div>
+            </div>
         </section>
+
+
+
+
     </main><button class="btn btn-light" data-bss-hover-animate="pulse" id="myBtn" title="Go To Top" onclick="topFunction()" type="button" style="background: rgba(164,164,164,0.42);"><i class="fa fa-chevron-up" style="margin-left: 5px;"></i></button>
     <footer class="page-footer dark" style="padding-top: 20px;">
         <div class="footer-copyright">
