--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
         <div class="col-sm-12 col-md-12 col-lg-9 col-xl-8 col-xxl-7 mx-auto" style="width: 95%;">
             <span style="font-size: 25px;">Sep. 2024</span>
             <ul style="padding-left: 16px;">
-                <li> 新网站发布</li>
+                <li> to be filled</li>
 
             </ul>
             <span style="font-size: 25px;">Aug. 2024</span>
