--- a/people.html
+++ b/people.html
@@ -489,18 +489,18 @@
                         <a href=""
                            target="_blank"
                            style="color: #000000;"><img
-                                src="assets/img2/group/lvruixuan.jpg" style="color: #000000;"></a>
+                                src="assets/img2/group/demo.jpg" style="color: #000000;"></a>
                         <div class="card-body" style="color: #000000;">
                             <h5 class="card-title"
                                 style="text-align: left;font-size: 19px;font-family: Montserrat, sans-serif;color: #000000;">
-                                吕瑞瑄</h5>
+                                彭程靖</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-auto col-md-9 col-lg-9 col-xl-10 col-xxl-10 my-auto" style="color: #000000;">
                     <div class="card" data-aos="fade-right" style="margin-bottom: 30px;color: #000000;">
                         <div class="card-body" style="color: #000000;">
-                            <p class="card-text" style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">2020年，本科就读于中山大学交通工程专业</p>
+                            <p class="card-text" style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">Short Bio: ...</p>
                             <p class="card-text"
                                style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">
                                 Publications: </p>
@@ -514,57 +514,57 @@
                     </div>
                 </div>
             </div>
-            <!--            本科生 2 -->
-            <div class="row justify-content-center align-items-center" style="color: #000000;">
-                <div class="col" style="color: #000000;max-width: 200px;padding: 0px;">
-                    <div class="card" style="max-width: 196px;color: #000000;">
-                        <a href=""
-                           target="_blank"
-                           style="color: #000000;"><img
-                                src="assets/img2/group/yechenglong.jpg" style="color: #000000;"></a>
-                        <div class="card-body" style="color: #000000;">
-                            <h5 class="card-title"
-                                style="text-align: left;font-size: 19px;font-family: Montserrat, sans-serif;color: #000000;">
-                                叶成隆</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-auto col-md-9 col-lg-9 col-xl-10 col-xxl-10 my-auto" style="color: #000000;">
-                    <div class="card" data-aos="fade-right" style="margin-bottom: 30px;color: #000000;">
-                        <div class="card-body" style="color: #000000;">
-                            <p class="card-text" style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">2020年，本科就读于中山大学交通工程专业</p>
-                            <p class="card-text"
-                               style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">
-                                Publications: </p>
-                            <p class="card-text"
-                               style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">
-                                Research Interest:</p>
-                            <p class="card-text"
-                               style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">
-                                Contact:</p>
-                        </div>
-                    </div>
-                </div>
+<!--            &lt;!&ndash;            本科生 2 &ndash;&gt;-->
+<!--            <div class="row justify-content-center align-items-center" style="color: #000000;">-->
+<!--                <div class="col" style="color: #000000;max-width: 200px;padding: 0px;">-->
+<!--                    <div class="card" style="max-width: 196px;color: #000000;">-->
+<!--                        <a href=""-->
+<!--                           target="_blank"-->
+<!--                           style="color: #000000;"><img-->
+<!--                                src="assets/img2/group/yechenglong.jpg" style="color: #000000;"></a>-->
+<!--                        <div class="card-body" style="color: #000000;">-->
+<!--                            <h5 class="card-title"-->
+<!--                                style="text-align: left;font-size: 19px;font-family: Montserrat, sans-serif;color: #000000;">-->
+<!--                                叶成隆</h5>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-sm-auto col-md-9 col-lg-9 col-xl-10 col-xxl-10 my-auto" style="color: #000000;">-->
+<!--                    <div class="card" data-aos="fade-right" style="margin-bottom: 30px;color: #000000;">-->
+<!--                        <div class="card-body" style="color: #000000;">-->
+<!--                            <p class="card-text" style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">2020年，本科就读于中山大学交通工程专业</p>-->
+<!--                            <p class="card-text"-->
+<!--                               style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">-->
+<!--                                Publications: </p>-->
+<!--                            <p class="card-text"-->
+<!--                               style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">-->
+<!--                                Research Interest:</p>-->
+<!--                            <p class="card-text"-->
+<!--                               style="text-align: left;font-size: 16px;font-family: Montserrat, sans-serif;color: #000000;margin-bottom: 10px;">-->
+<!--                                Contact:</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
 
         </div>
     </section>
-    <section class="clean-block clean-services dark" style="background: var(--bs-gray-100);padding-bottom: 60px;">
-        <div class="container" style="max-width: 1100px;">
-            <div class="block-heading" style="padding-top: 60px;">
-                <h1 style="font-size: 32px;text-align: left;">校友</h1>
-            </div>
-            <div class="row align-items-center" style="color: #000000;margin-right: 0px;margin-left: 0px;">
-                <div class="col" style="padding: 0px;">
-                    <div class="card" data-aos="fade-right" style="margin-bottom: 30px;color: #000000;">
-                        <div class="card-body" style="color: #000000;">
+<!--    <section class="clean-block clean-services dark" style="background: var(&#45;&#45;bs-gray-100);padding-bottom: 60px;">-->
+<!--        <div class="container" style="max-width: 1100px;">-->
+<!--            <div class="block-heading" style="padding-top: 60px;">-->
+<!--                <h1 style="font-size: 32px;text-align: left;">校友</h1>-->
+<!--            </div>-->
+<!--            <div class="row align-items-center" style="color: #000000;margin-right: 0px;margin-left: 0px;">-->
+<!--                <div class="col" style="padding: 0px;">-->
+<!--                    <div class="card" data-aos="fade-right" style="margin-bottom: 30px;color: #000000;">-->
+<!--                        <div class="card-body" style="color: #000000;">-->
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 </main>
 <button class="btn btn-light" data-bss-hover-animate="pulse" id="myBtn" title="Go To Top" onclick="topFunction()"
         type="button" style="background: rgba(164,164,164,0.42);"><i class="fa fa-chevron-up"
